--- a/DistanceLCD/.project
+++ b/DistanceLCD/.project
@@ -3,7 +3,7 @@
 	<name>DistanceLCD</name>
 	<comment></comment>
 	<projects>
-		<project>Arduino_Uno</project>
+		<project>Arduino_BT_w__ATmega328</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
