--- a/DistanceMesure/.project
+++ b/DistanceMesure/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DistanceLCD</name>
+	<name>DistanceMesure</name>
 	<comment></comment>
 	<projects>
 		<project>Arduino_BT_w__ATmega328</project>
