--- a/NanoTest/.cproject
+++ b/NanoTest/.cproject
@@ -120,4 +120,5 @@
 		<project id="NanoTest.null.807329700" name="NanoTest"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
+	<storageModule moduleId="refreshScope"/>
 </cproject>
