--- a/FlowerMonitor/.cproject
+++ b/FlowerMonitor/.cproject
@@ -123,5 +123,9 @@
 		<project id="FlowerMonitor.null.1347889024" name="FlowerMonitor"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
-	<storageModule moduleId="refreshScope"/>
+	<storageModule moduleId="refreshScope" versionNumber="2">
+		<configuration configurationName="Release">
+			<resource resourceType="PROJECT" workspacePath="/FlowerMonitor"/>
+		</configuration>
+	</storageModule>
 </cproject>
