--- a/FlowerMonitor/.project
+++ b/FlowerMonitor/.project
@@ -3,7 +3,7 @@
 	<name>FlowerMonitor</name>
 	<comment></comment>
 	<projects>
-		<project>Arduino_Uno</project>
+		<project>Arduino_Nano_w__ATmega328</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
