--- a/PlantMonitor/.project
+++ b/PlantMonitor/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FlowerMonitor</name>
+	<name>PlantMonitor</name>
 	<comment></comment>
 	<projects>
 		<project>Arduino_Nano_w__ATmega328</project>
